[package]
name = "yewprint"
version = "0.3.1"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Port of blueprintjs.com to Yew"
repository = "https://github.com/yewprint/yewprint"
homepage = "https://github.com/yewprint/yewprint"
documentation = "https://docs.rs/yewprint"
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT", "iconSvgPaths.js", "build.rs"]
keywords = ["blueprint", "yew", "ui"]
categories = ["gui"]

[features]
default = ["tree"]
tree = ["id_tree"]

[dependencies]
gloo = "0.8"
id_tree = { version = "1.8", optional = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["DomRect", "Element", "Event", "HtmlSelectElement"] }
yew = "0.19"

[build-dependencies]
heck = "0.4"
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }

[workspace]
members = ["yewprint-css", "yewprint-doc", "xtask"]
