[package]
name = "yewprint"
version = "0.4.3"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Port of blueprintjs.com to Yew"
repository = "https://github.com/yewprint/yewprint"
homepage = "https://github.com/yewprint/yewprint"
documentation = "https://docs.rs/yewprint"
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT"]
keywords = ["blueprint", "yew", "ui"]
categories = ["gui"]

[features]
default = ["tree"]
tree = ["id_tree"]

[dependencies]
gloo = "0.8"
id_tree = { version = "1.8", optional = true }
implicit-clone = "0.3.5"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["DomRect", "Element", "Event", "HtmlSelectElement", "DomTokenList", "CssStyleDeclaration"] }
yew = "0.20"
yew-callbacks = "0.2.1"

[workspace]
members = ["yewprint-css", "yewprint-doc", "xtask"]
