[package]
name = "yewprint"
version = "0.5.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Port of blueprintjs.com to Yew"
repository = "https://github.com/yewprint/yewprint"
homepage = "https://github.com/yewprint/yewprint"
documentation = "https://docs.rs/yewprint"
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT"]
keywords = ["blueprint", "yew", "ui"]
categories = ["gui"]

[features]
default = ["tree"]
tree = ["id_tree"]

[dependencies]
gloo = "0.11"
id_tree = { version = "1.8", optional = true }
implicit-clone = "0.4.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["DomRect", "Element", "Event", "HtmlSelectElement", "DomTokenList", "CssStyleDeclaration", "Window", "MediaQueryList"] }
yew = "0.21"
yew-callbacks = "0.2.1"

[workspace]
members = ["yewprint-css", "yewprint-doc", "xtask"]
