[package]
name = "yewprint-css"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
flate2 = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1"
tar = "0.4"
