[package]
name = "yewprint-css"
version = "0.2.1"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "CSS download helper for Yewprint"
repository = "https://github.com/yewprint/yewprint"
homepage = "https://github.com/yewprint/yewprint"
documentation = "https://docs.rs/yewprint-css"
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT"]
keywords = ["blueprint", "yew", "ui", "css"]
categories = ["gui"]

[dependencies]
anyhow = "1"
flate2 = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tar = "0.4"
ureq = { version = "2.4", features = ["json"] }
