[package]
name = "yewprint-doc"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = { git = "https://github.com/yewstack/yew.git", rev = "db3170f629f" }
web-sys = { version = "0.3", features = ["Window", "MediaQueryList"] }
yewprint = { path = "../yewprint" }
yew-router = { git = "https://github.com/yewstack/yew.git", rev = "db3170f629f" }

[build-dependencies]
syntect = "4.4.0"
