[package]
name = "yewprint"
version = "0.1.1"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Port of blueprintjs.com to Yew"
repository = "https://github.com/yewprint/yewprint"
homepage = "https://github.com/yewprint/yewprint"
documentation = "https://docs.rs/yewprint"
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT", "iconSvgPaths.js", "build.rs"]
keywords = ["blueprint", "yew", "ui"]
categories = ["gui"]

[features]
default = ["tree"]
tree = ["id_tree"]

[dependencies]
web-sys = { version = "0.3", features = ["DomRect", "Element", "Event"] }
yew = "0.19"
id_tree = { version = "1.7", optional = true }
wasm-bindgen = "0.2"
gloo-timers = "0.2.2"
gloo-utils = "0.1.1"

[build-dependencies]
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
heck = "0.3"
